fix scrollbar viewing of global wrapper-container

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,7 +77,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 90%;
 }
 
 /* Media query for smaller screens, such as mobile phones */
